--- a/index.html
+++ b/index.html
@@ -123,10 +123,27 @@
                            <h2 class="text-xl sm:text-2xl font-semibold text-sky-400">Dana</h2>
                            <span class="status-badge status-aktif">Aktif</span>
                         </div>
-                        <p id="dana-number" class="text-slate-300 text-lg sm:text-xl mt-1">0895324070395</p>
+                        <p id="dana-number" class="text-slate-300 text-lg sm:text-xl mt-1">0881026842429</p>
                     </div>
                     <button onclick="copyToClipboard('dana-number', 'Dana')" class="copy-button mt-3 sm:mt-0 bg-sky-500 hover:bg-sky-600 text-white font-medium py-2 px-4 rounded-lg text-sm flex items-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard mr-2" viewBox="0 0 16 16"><path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/><path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/></svg>
+                        Salin
+                    </button>
+                </div>
+            </div>
+
+            <!-- Shopeepay -->
+            <div class="payment-card bg-slate-700/70 p-5 sm:p-6 rounded-lg shadow-lg">
+                <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
+                    <div>
+                        <div class="flex items-center gap-x-2">
+                            <h2 class="text-xl sm:text-2xl font-semibold text-emerald-400">Shopeepay</h2>
+                            <span class="status-badge status-aktif">Aktif</span>
+                        </div>
+                        <p id="gopay-number" class="text-slate-300 text-lg sm:text-xl mt-1">085737437807</p>
+                    </div>
+                    <button onclick="copyToClipboard('gopay-number', 'Gopay')" class="copy-button mt-3 sm:mt-0 bg-emerald-500 hover:bg-emerald-600 text-white font-medium py-2 px-4 rounded-lg text-sm flex items-center">
+                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard mr-2" viewBox="0 0 16 16"><path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/><path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/></svg>
                         Salin
                     </button>
                 </div>
@@ -137,27 +154,10 @@
                 <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
                     <div>
                         <div class="flex items-center gap-x-2">
-                            <h2 class="text-xl sm:text-2xl font-semibold text-emerald-400">Gopay</h2>
+                            <h2 class="text-xl sm:text-2xl font-semibold text-purple-400">Gopay</h2>
                             <span class="status-badge status-aktif">Aktif</span>
                         </div>
-                        <p id="gopay-number" class="text-slate-300 text-lg sm:text-xl mt-1">0895324070395</p>
-                    </div>
-                    <button onclick="copyToClipboard('gopay-number', 'Gopay')" class="copy-button mt-3 sm:mt-0 bg-emerald-500 hover:bg-emerald-600 text-white font-medium py-2 px-4 rounded-lg text-sm flex items-center">
-                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard mr-2" viewBox="0 0 16 16"><path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/><path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/></svg>
-                        Salin
-                    </button>
-                </div>
-            </div>
-
-            <!-- OVO -->
-            <div class="payment-card bg-slate-700/70 p-5 sm:p-6 rounded-lg shadow-lg">
-                <div class="flex flex-col sm:flex-row justify-between items-start sm:items-center">
-                    <div>
-                        <div class="flex items-center gap-x-2">
-                            <h2 class="text-xl sm:text-2xl font-semibold text-purple-400">OVO</h2>
-                            <span class="status-badge status-aktif">Aktif</span>
-                        </div>
-                        <p id="ovo-number" class="text-slate-300 text-lg sm:text-xl mt-1">0895324070395</p>
+                        <p id="ovo-number" class="text-slate-300 text-lg sm:text-xl mt-1">0881026842429</p>
                     </div>
                     <button onclick="copyToClipboard('ovo-number', 'OVO')" class="copy-button mt-3 sm:mt-0 bg-purple-500 hover:bg-purple-600 text-white font-medium py-2 px-4 rounded-lg text-sm flex items-center">
                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard mr-2" viewBox="0 0 16 16"><path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/><path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/></svg>
@@ -173,7 +173,7 @@
                         <h2 class="text-xl sm:text-2xl font-semibold text-lime-400">QRIS</h2>
                         <span class="status-badge status-aktif">Aktif</span>
                     </div>
-                    <img id="qris-image-display" src="https://files.catbox.moe/jcp8hv.jpg" alt="[Image of Kode QRIS Pembayaran]" class="qris-image" onerror="this.onerror=null;this.src='https://placehold.co/200x200/1e293b/e0e0e0?text=QRIS+Tidak+Tersedia'; this.alt='[Image of Gagal memuat QRIS]';">
+                    <img id="qris-image-display" src="https://files.catbox.moe/g2qhln.png" alt="[Image of Kode QRIS Pembayaran]" class="qris-image" onerror="this.onerror=null;this.src='https://placehold.co/200x200/1e293b/e0e0e0?text=QRIS+Tidak+Tersedia'; this.alt='[Image of Gagal memuat QRIS]';">
                     <p class="text-slate-400 text-sm mt-2 mb-3">Klik pada area ini atau tombol di bawah untuk mengunduh kode QRIS.</p>
                     <button onclick="event.stopPropagation(); downloadQris()" class="download-button bg-lime-500 hover:bg-lime-600 text-white font-medium py-2 px-4 rounded-lg text-sm flex items-center self-center">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download mr-2" viewBox="0 0 16 16">
