--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
         body {
-            font-family: 'Inter', sans-serif;
+        font-family: 'Inter', sans-serif;
+        background-color: #FFF2EB;
+        color: #1e293b;
         }
         .payment-card, .faq-item {
             transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
@@ -211,7 +213,7 @@
                         Ke mana saya harus mengirim bukti pembayaran?
                     </summary>
                     <p class="text-slate-300 mt-3 text-sm sm:text-base">
-                        Silakan kirim bukti pembayaran Anda ke WhatsApp 081297662535.
+                        Silakan kirim bukti pembayaran Anda ke WhatsApp 6285167432963
                     </p>
                 </details>
                 <details class="faq-item bg-slate-700/70 p-4 sm:p-5 rounded-lg shadow-lg">
@@ -234,7 +236,7 @@
         </section>
 
         <footer class="text-center mt-10 sm:mt-12 text-slate-500 text-xs sm:text-sm">
-            <p>&copy; <span id="currentYear"></span> XenzMarket. Hak Cipta Dilindungi.</p>
+            <p>&copy; <span id="currentYear"></span> Tzuyukkii • 2021-2025.</p>
         </footer>
     </div>
 
@@ -244,7 +246,7 @@
             <p class="text-slate-300 mb-6 text-sm sm:text-base">
                 Nomor pembayaran telah disalin. Setelah melakukan transfer, mohon segera kirimkan bukti pembayaran Anda ke:
             </p>
-            <p class="text-lg font-semibold text-amber-400 mb-6">WhatsApp 081297662535</p>
+            <p class="text-lg font-semibold text-amber-400 mb-6">WhatsApp 6285167432963</p>
             <button id="closeModalButton" class="modal-close-button bg-rose-500 hover:bg-rose-600 text-white font-medium py-2 px-6 rounded-lg text-sm">Tutup</button>
         </div>
     </div>
@@ -253,7 +255,7 @@
         const paymentProofModal = document.getElementById('paymentProofModal');
         const closeModalButton = document.getElementById('closeModalButton');
         const qrisCard = document.getElementById('qris-card');
-        const qrisImageUrl = 'https://files.catbox.moe/jcp8hv.jpg';
+        const qrisImageUrl = 'https://files.catbox.moe/g2qhln.png';
 
         function copyToClipboard(elementId, paymentMethodName) {
             const textToCopy = document.getElementById(elementId).innerText;
