--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         Bagaimana cara melakukan pembayaran?
                     </summary>
                     <p class="text-slate-300 mt-3 text-sm sm:text-base">
-                        Untuk Dana, Gopay, dan OVO, salin nomor rekening/telepon yang tertera. Lakukan transfer sejumlah tagihan Anda. Untuk QRIS, unduh gambarnya lalu scan menggunakan aplikasi e-wallet atau mobile banking Anda. Setelah itu, mohon kirimkan bukti transfer Anda.
+                        Untuk Dana, Gopay, dan Shopeepay, salin nomor rekening/telepon yang tertera. Lakukan transfer sejumlah tagihan Anda. Untuk QRIS, unduh gambarnya lalu scan menggunakan aplikasi e-wallet atau mobile banking Anda. Setelah itu, mohon kirimkan bukti transfer Anda.
                     </p>
                 </details>
                 <details class="faq-item bg-slate-700/70 p-4 sm:p-5 rounded-lg shadow-lg">
